# PerformenceTests

./: CMakeLists.txt
2DArrFill/: CMakeLists.txt  access.cpp  main.cpp
EstimateMapDestructor/: CMakeLists.txt  main.cpp
GetNthElement/: main.cpp
LoopVectorization/: CMakeLists.txt  vec_sum.cpp
LoopVectorization/bad_addressing/: addres.cpp
LoopVectorization/complex_flow/: CMakeLists.txt  comp_flow.cpp
LoopVectorization/dependency/: CMakeLists.txt  data_dependency.cpp  data_dependency_bench.cpp
LoopVectorization/diff_stuff/: diff_stuff.cpp
LoopVectorization/func_call/: CMakeLists.txt  func_call.cpp
LoopVectorization/multiple_exits/: mult_exits.cpp
LoopVectorization/size/: CMakeLists.txt  size.cpp
MapDestructorEstimate/: CMakeLists.txt  main.cpp
MethodThroughAccess/: CMakeLists.txt  level_1.cpp  level_1.hpp  level_2.hpp  level_3.hpp  main.cpp
MultiChannelMerge/: CMakeLists.txt  main.cpp  source_generator.cpp  source_generator.h
NanAndOptional/: CMakeLists.txt  main.cpp  main_opt.cpp
NanOptCompare/: CMakeLists.txt
NumericOperations/: CMakeLists.txt  main.cpp  main_bare.cpp
ParallelPrintInOrder/: CMakeLists.txt  empty_prints.cpp  main.cpp  timed_prints.cpp
ParallelWriteInOrder/: CMakeLists.txt  empty_prints.cpp  timed_prints.cpp
PlayingWithLogger/: CMakeLists.txt  main.cpp  simple_logger.h
PlayingWithLogger/Compare_Glog_and_Spdlog/: CMakeLists.txt  log_widget.h  main.cpp
PlayingWithLogger/compare_different_flush/: buff_acc_threading.h  main.cpp  separated_flush.h  simple_logger.h
RangeBasedFor/: CMakeLists.txt  main_deq.cpp  main_map.cpp  main_vec.cpp
ReturnTableTest/: CMakeLists.txt  main.cpp
StdFunction/: CMakeLists.txt  main.cpp  outside_less.cpp  outside_less.h
StringFormation/: CMakeLists.txt  main.cpp
TestingPartition/: CMakeLists.txt
Testing_partition/: CMakeLists.txt  main.cpp
TestsWithVectorShiftArmadillo/: CMakeLists.txt  main.cpp  rotate_bench.cpp  shift_bench.cpp  shift_write_get_bench.cpp
TryCatchTest/: CMakeLists.txt
TryCatchtest/: CMakeLists.txt  main.cpp
loop_vectorization/: CMakeLists.txt  data_dependency.cpp  data_dependency_bench.cpp  vec_sum.cpp
loop_vectorization/bad_addressing/: CMakeLists.txt
loop_vectorization/counter/: CMakeLists.txt  counter.cpp
loop_vectorization/diff_stuff/: CMakeLists.txt
loop_vectorization/multiple_exits/: CMakeLists.txt
scripts/: plot_benchmarks.py
