cmake_minimum_required(VERSION 3.10)

project(PerformanceTests LANGUAGES CXX)

function(create_benchmark created_target executable_name)
    get_filename_component(dir_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
    string(TOLOWER ${dir_name} dir_name)
    string(CONCAT local_target_name ${executable_name} "_" ${dir_name})
    add_executable(${local_target_name} ${ARGN})
    set_target_properties(${local_target_name} PROPERTIES OUTPUT_NAME ${executable_name})
    target_link_libraries(${local_target_name} PRIVATE benchmark::benchmark)
    set(${created_target} ${local_target_name} PARENT_SCOPE)
endfunction()

find_package(benchmark REQUIRED)

add_subdirectory(MultiChannelMerge)
add_subdirectory(2DArrFill)
add_subdirectory(LoopVectorization)
add_subdirectory(EstimateMapDestructor)
add_subdirectory(MethodThroughAccess)
add_subdirectory(NanOptCompare)
add_subdirectory(NumericOperations)
add_subdirectory(ParallelWriteInOrder)
add_subdirectory(RangeBasedFor)
add_subdirectory(StdFunction)
add_subdirectory(StringFormation)
add_subdirectory(TryCatchTest)
add_subdirectory(TestingPartition)
add_subdirectory(TestsWithVectorShiftArmadillo)

